# credit_risk_model

./: .cruft.json  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  READ.md  README.md  docker-compose.yaml  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  main.yml
data/processed/: X_test.csv  y_test.csv  y_train.csv
frontend/: index.html  script.js  style.css
notebook/: CreditRiskAnalysis.ipynb  EDA_Pipeline.ipynb  data_analysis_new.ipynb
src/credit_risk_model/: clean_data.py  evaluate.py  preprocess.py  run_pipeline.py  train.py
src/credit_risk_model/api/: app.py
tests/: test_api.py  test_foo.py  test_model_file.py  test_pipeline.py
text file/: test_values_set.txt
